# audio_file_synthesis_mcp

./: .gitignore  Cargo.toml  README.md
docs/: audio-synthesis-mcp-design.md
src/: error.rs  lib.rs  main.rs
src/audio/: decode.rs  downmix.rs  encode.rs  mix.rs  mod.rs  normalize.rs  resample.rs
src/mcp/: server.rs  tools.rs
