[package]
name = "audio_file_synthesis_mcp"
version = "0.1.0"
edition = "2024"

[dependencies]
claxon = "0.4.3"
minimp3 = "0.6.1"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
symphonia = { version = "0.5.4", default-features = false, features = ["aac", "alac", "isomp4"] }
